syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.skywalking.apm.collector.remote.grpc.proto";

service RemoteCommonService {
    rpc call (Message) returns (Empty) {
    }
}

message Message {
    string workerRole = 1;
    int32 dataDefineId = 2;
    bytes dataBytes = 3;
}

message Empty {
}