syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.skywalking.apm.network.trace.proto";

//register service for ApplicationCode, this service is called when service starts.
service ApplicationRegisterService {
    rpc register (Application) returns (ApplicationMapping) {
    }
}

message Application {
    string applicationCode = 1;
}

message ApplicationMapping {
    int32 applicationId = 1;
    Application application = 2;
}

